重构教程命令系统，新增多种操作以管理教程演示桩，包括生成、清除和列出功能；优化了教程管理器的实体处理逻辑，提升了代码可读性和维护性。